Make forall a keyword (#23719)
Before this change, GHC used to accept `forall` as a term-level
identifier:

	-- from constraints-0.13
	forall :: forall p. (forall a. Dict (p a)) -> Dict (Forall p)
	forall d = ...

Now it is a parse error.

The -Wforall-identifier warning has served its purpose and is now
a deprecated no-op.

--- a/docs/users_guide/9.10.1-notes.rst
+++ b/docs/users_guide/9.10.1-notes.rst
@@ -37,6 +37,15 @@ Language
   For more information on what types are allowed in kinds, see the
   :ref:`promotion` section.
 
+- Using ``forall`` as an identifier is now a parse error, as forewarned
+  by :ghc-flag:`-Wforall-identifier`::
+
+    forall :: (Variable a, MonadQSAT s m) => m a
+    -- parse error on input ‘forall’
+
+  Library authors are advised to use a different name for their functions,
+  such as ``forAll``, ``for_all``, or ``forall_``.
+
 Compiler
 ~~~~~~~~
 
@@ -86,6 +95,9 @@ Compiler
 - Type abstractions in constructor patterns that were previously admitted without enabling the :extension:`TypeAbstractions`
   extension now trigger a warning, :ghc-flag:`-Wdeprecated-type-abstractions`.
   This new warning is part of the :ghc-flag:`-Wcompat` warning group and will become an error in a future GHC release.
+
+- The :ghc-flag:`-Wforall-identifier` flag is now deprecated and removed from :ghc-flag:`-Wdefault`,
+  as ``forall`` is no longer parsed as an identifier.
 
 GHCi
 ~~~~
