rel-notes: Mention template variable matching proposal

--- a/docs/users_guide/9.8.1-notes.rst
+++ b/docs/users_guide/9.8.1-notes.rst
@@ -84,7 +84,9 @@ Compiler
   the future extension ``RequiredTypeArguments``.
 
 - Rewrite rules now support a limited form of higher order matching when a
-  pattern variable is applied to distinct locally bound variables. For example: ::
+  pattern variable is applied to distinct locally bound variables, as proposed in
+  `GHC Proposal #555 <https://github.com/ghc-proposals/ghc-proposals/blob/master/proposals/0555-template-patterns.rst>`.
+  For example: ::
 
       forall f. foo (\x -> f x)
 
