Update to Unicode 15.1.0
See: https://www.unicode.org/versions/Unicode15.1.0/

--- a/docs/users_guide/9.8.1-notes.rst
+++ b/docs/users_guide/9.8.1-notes.rst
@@ -230,6 +230,7 @@ Runtime system
 ~~~~~~~~~~~~~~~~
 
 - :base-ref:`Data.Tuple` now exports ``getSolo :: Solo a -> a``.
+- Updated to `Unicode 15.1.0 <https://www.unicode.org/versions/Unicode15.1.0/>`_.
 
 ``ghc-prim`` library
 ~~~~~~~~~~~~~~~~~~~~
