--- a/docs/users_guide/9.10.1-notes.rst
+++ b/docs/users_guide/9.10.1-notes.rst
@@ -132,6 +132,10 @@ Compiler
 GHCi
 ~~~~
 
+- GHCi now differentiates between adding, unadding, loading, unloading and reloading
+  in its responses to using the respective commands. The output with `-fshow-loaded-modules`
+  is not changed to keep backwards compatibility for tooling.
+
 Runtime system
 ~~~~~~~~~~~~~~
 
