--- a/docs/users_guide/9.10.1-notes.rst
+++ b/docs/users_guide/9.10.1-notes.rst
@@ -272,6 +272,17 @@ Runtime system
   constructors in scope and the levity of ``t`` is statically known,
   then the constraint ``DataToTag t`` can always be solved.
 
+- Exceptions can now carry arbitrary user-defined annotations via the new
+  :base-ref:`GHC.Exception.Type.ExceptionContext` implicit parameter of
+  ``SomeException``. These annotations are intended to be used to carry
+  context describing the provenance of an exception.
+
+- GHC now collects backtraces for synchronous exceptions. These are carried by
+  the exception via the ``ExceptionContext`` mechanism described above.
+  GHC supports several mechanisms by which backtraces can be collected which
+  can be individually enabled and disabled via
+  :base-ref:`GHC.Exception.Backtrace.setEnabledBacktraceMechanisms`.
+
 
 ``ghc-prim`` library
 ~~~~~~~~~~~~~~~~~~~~
